# kindshot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT_LOG.md  Dockerfile  IMPROVEMENT_ANALYSIS.md  README.md  SESSION_HANDOFF.md  deploy-guide.md  docker-compose.yml  pyproject.toml
.codex/: instructions.md
config/: risk_limits.toml
dashboard/: app.py  data_loader.py  run.sh
deploy/: .env.example  cron.sh  daily_report.py  deploy.sh  dump-errors.sh  go-live.sh  kindshot-dashboard.service  kindshot.service  log_summary.py  logs.sh  micro-live.env.example  push-logs.sh  run.sh  server_monitor.py  setup.sh  status.sh  verify-live.sh
docs/: 2026-03-26-fire-performance-analysis.md  backtest-analysis.md  daily-check-20260325.md  daily-nvidia-report.md  integration-validation.md  monday-go-live-checklist.md  nvidia-day1.md  nvidia-perf.md  paper-trading-report.md  replay-2weeks.md  strategy-config-20260329.md  strategy-research-kr-20260329.md  strategy_performance_report.txt  telegram-setup.md  v82_v83_backtest_report.md  weekly-perf.md  weekly-performance.md
logs/: daily_report_20260312.txt  daily_report_20260313.txt  kindshot_20260310.jsonl  kindshot_20260311.jsonl  kindshot_20260312.jsonl  kindshot_20260313.jsonl  polling_trace_20260311.jsonl  polling_trace_20260312.jsonl  polling_trace_20260313.jsonl
memory/: MEMORY.md  red-team-audit.md
reports/: 2026-03-27_morning_analysis.md  guardrail_sim.json  roi-report-kindshot-2026-03.md  signal-backtest-result.md  stress-test.md  technical-strategy-research.json  technical-strategy-research.md  (+1 more)
(+251 files in other folders)
