[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kindshot"
version = "0.1.3"
description = "KRX news-driven day trading MVP"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "feedparser>=6.0",
    "anthropic>=0.40",
    "openai>=1.0",
    "pykrx>=1.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dashboard = [
    "streamlit>=1.30",
    "plotly>=5.18",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "aioresponses>=0.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/kindshot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
